# otel-tutorial-rust

./: .env.example  .gitignore  .markdownlint-cli2.yaml  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DOCS_SETUP.md  GITHUB_PAGES_SETUP.md  MKDOCS_SUMMARY.md  ONBOARDING.md  PROJECT_SUMMARY.txt  README.md  REFERENCE.md  START_K6_TEST.sh  TECH-STACK.md  VERIFY_MKDOCS.sh  aqua.yaml  docker-compose.yml  justfile  k6-stress-test.js  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
config/: loki-config.yml  prometheus.yml  promtail-config.yml
config/grafana/dashboards/: dashboard-provider.yml  otel-observability-dashboard.json
config/grafana/datasources/: datasources.yml
config/grafana/provisioning/orgs/: orgs.yml
docs/: INDEX.md  index.md
docs/api/: endpoints.md  examples.md
docs/getting-started/: QUICKSTART.md  START_HERE.md  index.md
docs/guides/: ARCHITECTURE.md  ONBOARDING.md  RUN_K6_TEST.md  TECH-STACK.md  k6-summary.md  mkdocs-setup.md
docs/reference/: commands.md  project-contents.md  troubleshooting.md
src/: custom_middleware.rs  handlers.rs  main.rs  metrics.rs  observability.rs
