[package]
name = "otel-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }
tracing-appender = "0.2"

# OpenTelemetry
opentelemetry = { version = "0.20" }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.20", features = ["trace", "rt-tokio"] }
tracing-opentelemetry = "0.21"

# Metrics
once_cell = "1.19"
prometheus = "0.13"

# HTTP & Web
actix-web = "4.4"
actix-rt = "2.9"

# Futures
futures = "0.3"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
